# ai-agent-onboarding-lite

./: .coverage  .cursorrules  .flake8  .gitattributes  .gitignore  .isort.cfg  .pre-commit-config.yaml  .protect  AGENTS.md  AI_HANDOVER_PROTOCOL.md  API_INTEGRATION_GUIDE.md  COVERAGE_PLAN.md  DEVELOPMENT.md  DEVELOPMENT_CONTEXT.md  ENHANCED_CLEANUP_SYSTEM.py  ENHANCED_FILE_PROTECTION.py  FEATURE_SUMMARY.md  INTELLIGENT_ERROR_RESOLVER.py  Makefile  ORCHESTRATION_CONSOLIDATION_PLAN.md  PRIORITY_IMPLEMENTATION_ORDER.md  PROGRESS_AUTOMATION.py  PROJECT_ONBOARDING_PACKAGE.md  PROJECT_STATUS_TRACKER.md  PROTECTED_FILES.md  README.md  README_ai_onboard.md  README_nl_mode.md  ROOT_CLEANUP_ANALYSIS.md  SALVAGE_PLAN.md  SCOPE_CHANGE_DETECTOR.py  SYSTEM_ARCHITECTURE_OVERVIEW.md  TECHNICAL_METHODOLOGIES.md  VALIDATION_README.md  ai_onboard_system_flow.md  cleanup.py  compare_validation.py  dashboard_mvp.py  debug_self_improvement.py  demonstrate_false_positives.py  (+22 more)
.ai-directives/: 00_PRIME_DIRECTIVE.md  01_AI_AGENT_PERSONA.md  02_SYSTEM_INTEGRATION.md  03_VISION_ALIGNMENT.md  04_TOOL_CONSULTATION.md  05_PATTERN_APPLICATION.md  06_SAFETY_CHECKS.md  07_CONFIRMATION.md  MASTER_PROMPT.md
.ai_onboard/directives/: README.md  best_practices.md  core_commands.md  gate_system.md  planning_workflow.md  vision_interrogation.md
.devcontainer/: Dockerfile  README.md  devcontainer.json  docker-compose.yml  post-create.sh
.githooks/: pre-commit  pre-push
.github/: CI_CONFIG.md  CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: agentops.yml  ci.yml  deploy.yml  nightly_sweep.yml  performance.yml  security.yml  test-reporting.yml
.mypy_cache/: missing_stubs
.mypy_cache/3.8/: __future__.data.json  __future__.meta.json  __main__.data.json  __main__.meta.json  _ast.data.json  _ast.meta.json  _asyncio.data.json  _asyncio.meta.json  _bisect.data.json  _bisect.meta.json  _blake2.data.json  _blake2.meta.json  _bz2.meta.json  _codecs.data.json  _codecs.meta.json  _collections_abc.meta.json  _compression.data.json  _compression.meta.json  _contextvars.data.json  _contextvars.meta.json  _csv.data.json  _csv.meta.json  _ctypes.data.json  _ctypes.meta.json  _decimal.data.json  _decimal.meta.json  _frozen_importlib.data.json  _frozen_importlib.meta.json  _frozen_importlib_external.data.json  _frozen_importlib_external.meta.json  _hashlib.data.json  _hashlib.meta.json  _imp.data.json  _imp.meta.json  _io.meta.json  _locale.data.json  _locale.meta.json  _operator.data.json  _operator.meta.json  _pickle.meta.json  (+224 more)
.mypy_cache/3.9/: __future__.data.json  __future__.meta.json  (+172 more)
ai_onboard/: VERSION.txt  __init__.py  __main__.py  _version.py
ai_onboard.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
config/: .flake8  .pre-commit-config.yaml  README.md  pre-commit-config.yaml  pylint.ini
directives/: README.md  best_practices.md  core_commands.md  gate_system.md  planning_workflow.md  vision_interrogation.md
docs/: DEAD_CODE_REMOVAL_PLAN.md  DIRECTORY_STRUCTURE_DESIGN.md  IMPORT_ANALYSIS_REPORT.md  IMPORT_CONSOLIDATION_SYSTEM.md  MVP_COMPLETION_SUMMARY.md  OPTIMIZATION_CRITICAL_PATH.md  PHASE1_ORGANIZATION_PLAN.md  PRODUCTION_READINESS_SYSTEM_FLOW.md  README.md  ROOT_DIRECTORY_ANALYSIS.md  SAFE_CLEANUP_PLAN.md  SYSTEM_OPTIMIZATION_PLAN.md  agent-integration.md  ai-agent-collaboration-protocol.md  ci-cd-workflows.md  continuous-improvement-system.md  current-state-turnover.md  enhanced-system-testing-analysis.md  intelligent-alignment-system-plan.md  metrics_collection_system_design.md  risk-based-organization-implementation.md  system-turnover.md  ui-ux-enhancement-plan.md
examples/: ai_agent_usage.py  cursor_prompt_loop.py  demo_anti_drift_workflow.py  demonstrate_self_improvement.py  integration_demo.py  prompt_vs_code_demo.py  simple_demo.py
mock-project/: README.md  ai_onboard.json  requirements.txt
scripts/: __init__.py  acceptance_check.py  analyze_imports.py  bump_version.py  check_protected_deletions.py  check_requirements_consistency.py  ci_summarize.py  debug_self_improvement.py  dev_setup.py  enhanced_system_tests.py  fix_exception_handling.py  fix_imports.py  fix_linting_issues.py  generate_changelog.py  generate_test_report.py  health_monitor.py  import_cleanup.py  integrated_import_consolidation.py  integration_tests.py  local_ci_validation.py  protected_paths.py  protected_paths_diff.py  run_checks.py  run_ci_tests.py  setup_dev_env.py  setup_local_ci.py  system_health_check.py  test_all_tools.py  test_system.py  validate_dead_code.py  validate_dev_env.py  validate_import_equivalence.py  validate_project_structure.py
tests/: __init__.py  advanced_test_reporting.py  commands_advanced_test_reporting.py  commands_enhanced_testing.py  conftest.py  debug_tool_test.py  generate_test_report.py  test_cli_smoke.py  test_continuous_improvement_validator.py  test_cursor_workflows.py  test_dead_code_integration.py  test_integration_ci_validator.py  test_new_tools.py  test_new_tools_phase2.py  test_new_tools_phase3.py  test_self_improvement_system.py  test_system.py  test_t16_cursor_integration.py  test_unified_orchestration.py  test_wbs_auto_update.py
(+1982 files in other folders)
